fix footer alignment for prescription template

--- a/templates/prescription.hbs
+++ b/templates/prescription.hbs
@@ -60,6 +60,7 @@
         display: flex;
         justify-content: center;
         margin-top: 20px;
+        width: 100%;
       }
       
     </style>
